<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">送气工</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_title">派思燃气</string>
    <string name="action_account">个人资料</string>
    <string name="action_hours">配送总时长</string>
    <string name="action_hours_connet">0</string>
    <string name="action_orders">配送订单量</string>
    <string name="action_paimings">配送订单排名</string>
    <string name="account_back">退出账号</string>
    <string name="grass_order">订气订单</string>
    <string name="botter_order">退瓶订单</string>
    <string name="all_order">全部订单</string>
    <string name="look_all_order">查看全部订单</string>
    <string name="unfinsh">未完成</string>
    <string name="finsh">已完成</string>
    <string name="selectaddress">请输入客户地址</string>
    <string name="title_activity_nfc">NfcActivity</string>
    <string name="title_activity_goods_recei">GoodsReceiActivity</string>
     <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    
      <string name="d">图片描述</string>
     <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">已加载全部</string>
    <string name="more">加载中</string>
    <string name="create">创建订单</string>
    <string name="message">首页</string>
    <string name="getgoods">商品领取</string>
    <string name="myself">我的</string>
    

</resources>
