<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
     xmlns:imagecontrol="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg"
 >
 
    <include layout="@layout/holder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="400"/>


<RelativeLayout 
    android:id="@+id/rl_count"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="160"
    android:background="@color/white"
    android:layout_marginTop="10dp">

    <LinearLayout
        android:id="@+id/ll_home_hours"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/rl_home_hours"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical" >

            <TextView
                android:id="@+id/tv_home_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/action_hours"
                android:textColor="@color/home_connet"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/tv_home_hours_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tv_home_hours"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="8dp"
                android:text="@string/action_hours_connet"
                android:textColor="@color/home_connet_hours"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/tv_home_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tv_home_hours_count"
                android:layout_alignBottom="@+id/tv_home_hours_count"
                android:layout_toRightOf="@+id/tv_home_hours_count"
                android:text="天"
                android:textColor="@color/home_connet_hours"
                android:textSize="11sp" />
        </RelativeLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:background="#ddd" />

        <RelativeLayout
            android:id="@+id/rl_home_orders"
             android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical" >

            <TextView
                android:id="@+id/tv_home_orders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/action_orders"
                android:textColor="@color/home_connet"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/tv_home_orders_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tv_home_orders"
                android:layout_below="@+id/tv_home_orders"
                android:text="@string/action_hours_connet"
                android:textColor="@color/home_connet_hours"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/tv_home_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tv_home_orders_count"
                android:layout_alignBottom="@+id/tv_home_orders_count"
                android:layout_toRightOf="@+id/tv_home_orders_count"
                android:text="单"
                android:textColor="@color/home_connet_hours"
                android:textSize="11sp" />
        </RelativeLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:background="#ddd" />

        <RelativeLayout
            android:id="@+id/rl_home_paiming"
             android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical" >

            <TextView
                android:id="@+id/tv_home_paimings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/action_paimings"
                android:textColor="@color/home_connet"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/tv_home_paimings_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/tv_home"
                android:text="@string/action_hours_connet"
                android:textColor="@color/home_connet_hours"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/tv_home_paiming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tv_home_paimings_count"
                android:layout_alignBottom="@+id/tv_home_paimings_count"
                android:layout_toRightOf="@+id/tv_home_paimings_count"
                android:text="名"
                android:textColor="@color/home_connet_hours"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/tv_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tv_home_paimings_count"
                android:layout_alignBottom="@+id/tv_home_paimings_count"
                android:layout_alignLeft="@+id/tv_home_paimings"
                android:text="第"
                android:textColor="@color/home_connet_hours"
                android:textSize="11sp" />
        </RelativeLayout>
    </LinearLayout>
    
</RelativeLayout>

<RelativeLayout 
    android:id="@+id/rl_menu"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="720"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
     >
    
    <GridView 
        android:id="@+id/gv_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="true" 
        android:numColumns="2"
        android:horizontalSpacing="10dp"
        android:verticalSpacing="10dp"
        android:stretchMode="columnWidth"
        android:scrollbars="none"
        >
        
    </GridView>
    
</RelativeLayout>


    
</LinearLayout >




























